Updated research block; added logos

--- a/cv.tex
+++ b/cv.tex
@@ -44,100 +44,138 @@
       }}                                                                                                   \\
    \textit{Name         } & Edward Baxter Linscott &                  &                                    \\
    \textit{Nationality  } & New Zealander          & \textit{Email  } & edward.linscott@epfl.ch            \\
-   \textit{Date of birth} & 26/11/1991             & \textit{Website} & \url{https://elinscott.github.io/} \\
+   \textit{Date of birth} & 26/11/1991             & \textit{Website} & \href{https://elinscott.github.io/}{elinscott.github.io} \\
 \end{tabularx}
 
-\begin{tabularx}{\textwidth}{l l l l}
-   \multicolumn{4}{l}{\cellcolor{seaborn_blue}\large\textbf{\textcolor{seaborn_bg_grey_half}{Professional Experience}}}                                                                                                                                                                                                                        \\
-   \rowcolor{seaborn_bg_grey}
-   \textbf{start date} & \textbf{end date} & \textbf{job title}      & \textbf{institution}                                                                                                                                                                                                                                                    \\
-   \rowcolor{seaborn_bg_grey_half}
-   1 Nov 2019          & present           & Postdoctoral Researcher & École polytechnique fédérale de Lausanne                                                                                                                                                                                                                                \\
-   \rowcolor{seaborn_bg_grey_half}
-   \multicolumn{4}{X}{
-      I am currently a postdoc at EPFL, Lausanne, Switzerland, in the group of Prof. Nicola Marzari. I am working on developing Koopmans spectral functionals for addressing systematic errors in density functional theory.
-   }                                                                                                                                                                                                                                                                                                                                           \\
-   \rowcolor{seaborn_bg_grey}
-   1 Mar 2014          & 31 July 2014      & Research Assistant      & University of Otago                                                                                                                                                                                                                                                     \\
-   \rowcolor{seaborn_bg_grey}
-   \multicolumn{4}{X}{
-      I was briefly employed as a Research Assistant at the University of Otago, where I continued the work from my honours year studying the behaviour of dipolar Bose gases. This work resulted in a publication where we predicted an instability of dipolar BECs in regions of experimental interest.
-   }                                                                                                                                                                                                                                                                                                                                           \\
-   \rowcolor{seaborn_bg_grey_half}
-   21 Nov 2011         & 30 Jan 2012       & Summer Studentship      & University of Otago                                                                                                                                                                                                                                                     \\
-   \rowcolor{seaborn_bg_grey_half}
-   \multicolumn{4}{X}{
-      I spent a summer in a studentship with an engineering/physics/medical research group developing new computed tomography (CT) scanning technology. I was involved in developing software that allowed the research team to quantify the quality of their images (and hence assess the performance of their machines during development).} \\
-\end{tabularx}
+% \begin{tabularx}{\textwidth}{l}
+%    \cellcolor{seaborn_blue}\large\textbf{\textcolor{seaborn_bg_grey_half}{Summary}} \\
+%    text here
+% \end{tabularx}
 
-\begin{tabularx}{\textwidth}{l l l l l}
-   \multicolumn{5}{l}{\cellcolor{seaborn_blue}\large\textbf{\textcolor{seaborn_bg_grey_half}{Education}}}                                                                                                                                                            \\
-   \rowcolor{seaborn_bg_grey_half}\textbf{start date}                                                                 & \textbf{end date}                                                        & \textbf{degree/course} & \textbf{institution}    & \textbf{grade} \\
+\setlength{\fboxsep}{5pt}%
+\setlength{\fboxrule}{0pt}
+
+\begin{tabularx}{\textwidth}{X}
+   \cellcolor{seaborn_blue}\large\textbf{\textcolor{seaborn_bg_grey_half}{Research and Education}}                                                                                                                                                                                                                                                                         \\
+   \rowcolor{seaborn_bg_grey_half}%
+      \hbox{%
+      \raisebox{-0.5\height}{\fbox{\includegraphics[height=0.7cm]{logos/epfl_trimmed.png}}}
+      \raisebox{-0.5\height}{\begin{minipage}[b]{0.7\linewidth}
+         École polytechnique fédérale de Lausanne \\ Switzerland
+      \end{minipage}}
+      }
+      \\
+   \textbf{Postdoctoral researcher (1 Nov 2019 -- present)}                                                                                                                                                                                                                                                                                                                \\
+   \rowcolor{seaborn_bg_grey_half}
+   \textit{Supervisor:} Prof. Nicola Marzari
+   \\
+
+   I am currently a postdoc in the group of Prof. Nicola Marzari. I am working on developing Koopmans spectral functionals for addressing systematic errors in density functional theory.
+   \\
    %
    % PhD
    %
    \rowcolor{seaborn_bg_grey}
-   1 Oct 2015                                                                                                         & 26 Oct 2019                                                              & PhD in Physics         & University of Cambridge &                \\*
-   \multicolumn{5}{X}{\cellcolor{seaborn_bg_grey}%
-      \textit{Title:} ``Describing Correlation Effects in Biological Systems"
-   }                                                                                                                                                                                                                                                                 \\
-   \multicolumn{5}{X}{\cellcolor{seaborn_bg_grey}%
-      \textit{Supervisors:} Prof. Mike Payne and Dr. Daniel Cole (Newcastle)
-   }                                                                                                                                                                                                                                                                 \\
-   \multicolumn{5}{X}{\cellcolor{seaborn_bg_grey}%
-      \textit{Funding:} Cambridge-Rutherford Memorial Scholarship (valued at approx.\ \euro{}150,000; competitively awarded)
-   }                                                                                                                                                                                                                                                                 \\
-   \multicolumn{5}{X}{\cellcolor{seaborn_bg_grey}%
-      Many key reactions in biology are performed by metalloproteins. These systems are a challenge to accurately simulate due to two contrasting reasons. Firstly, the strong correlation present due to the transition metal atoms requires more accurate theories than semi-local density-functional theory. And secondly the ambient protein environment requires explicit treatment of thousands of atoms at the quantum-mechanical level. Over the course of my PhD I developed novel approaches within linear-response theory for determining Hubbard and Hund's parameters from first principles for DFT\,+\,\emph{U} calculations. I also developed a dynamical mean-field theory module for the linear scaling package ONETEP. I applied these tools to study (a) photodissociation of carboxy-heme (b) the electronic structure of hemocyanin, and (c) water-to-oxygen conversion performed by the oxygen evolving complex.
-   }                                                                                                                                                                                                                                                                 \\
+      \hbox{%
+      \raisebox{-0.5\height}{\fbox{\includegraphics[height=1.5cm]{logos/cambridge_trimmed.png}}}
+      \raisebox{-0.5\height}{\begin{minipage}[b]{0.7\linewidth}
+         University of Cambridge \\ United Kingdom
+      \end{minipage}}
+      } \\
+   \textbf{PhD in Physics (1 Oct 2015 -- 26 Oct 2019)}                                                                                                                                                                                                                                                                                                                     \\
+   \cellcolor{seaborn_bg_grey}%
+   \noindent \textit{Title:} ``Describing Correlation Effects in Biological Systems"
+   \\
+   \cellcolor{seaborn_bg_grey}%
+   \textit{Supervisors:} Prof. Mike Payne and Dr. Daniel Cole (Newcastle)
+   \\
+   \cellcolor{seaborn_bg_grey}%
+   \textit{Funding:} Cambridge-Rutherford Memorial Scholarship (valued at approx.\ \euro{}150,000; competitively awarded)
+   \\
+   \cellcolor{seaborn_bg_grey}%
+   Many key reactions in biology are performed by metalloproteins. These systems are a challenge to accurately simulate due to two contrasting reasons. Firstly, the strong correlation present due to the transition metal atoms requires more accurate theories than semi-local density-functional theory. And secondly the ambient protein environment requires explicit treatment of thousands of atoms at the quantum-mechanical level. Over the course of my PhD I developed novel approaches within linear-response theory for determining Hubbard and Hund's parameters from first principles for DFT\,+\,\emph{U} calculations. I also developed a dynamical mean-field theory module for the linear scaling package ONETEP. I applied these tools to study (a) photodissociation of carboxy-heme (b) the electronic structure of hemocyanin, and (c) water-to-oxygen conversion performed by the oxygen evolving complex.
+   \\
    %
    % Masters
    %
+   \rowcolor{seaborn_bg_grey}
+   \textbf{MPhil in Scientific Computing (1 Oct 2014 -- 30 Sep 2015)}
+   \\%
+   \rowcolor{seaborn_bg_grey}
+
+   \textit{Title:} ``Strong Correlation Effects in the Electronic Structure of the Photosystem II Complex"
+   \\
+   \rowcolor{seaborn_bg_grey}%
+
+   \textit{Supervisors:} Prof. Mike Payne and Dr. Daniel Cole
+   \\
+   \rowcolor{seaborn_bg_grey}%
+
+   \textit{Funding:} EPSRC (valued at approx.\ \euro{}50,000)
+   \\
+   \rowcolor{seaborn_bg_grey}
+
+   Designed to lead into my PhD, my masters project motivated the need for models of the oxygen-evolving complex (OEC) that are thousands of atoms in size, and demonstrated that such calculations are feasible with the linear scaling density functional theory code ONETEP. The thesis also explored the DFT\,+\,\emph{U} as a method for treating the correlation present in the OEC core.
+   \\
+   \end{tabularx}
+   \newpage
+\begin{tabularx}{\textwidth}{X}
    \rowcolor{seaborn_bg_grey_half}
-   1 Oct 2014
-                                                                                                                      & 30 Sep 2015
-                                                                                                                      & \multicolumn{1}{m{0.26\textwidth}}{MPhil in Scientific \mbox{Computing}}
-                                                                                                                      & University of Cambridge
-                                                                                                                      & Distinction                                                                                                                                  \\
+      \hbox{%
+      \raisebox{-0.5\height}{\fbox{\includegraphics[height=1.5cm]{logos/otago_trimmed.png}}}
+      \raisebox{-0.5\height}{\begin{minipage}[b]{0.7\linewidth}
+         University of Otago \\ New Zealand
+      \end{minipage}}
+      } \\
+   \rowcolor{seaborn_bg_grey}
+   \textbf{Research Assistant (1 Mar 2014 -- 31 July 2014)} \\
    \rowcolor{seaborn_bg_grey_half}
-   \multicolumn{5}{X}{
-      \textit{Title:} ``Strong Correlation Effects in the Electronic Structure of the Photosystem II Complex"
-   }                                                                                                                                                                                                                                                                 \\
-   \rowcolor{seaborn_bg_grey_half}
-   \multicolumn{5}{X}{
-      \textit{Supervisors:} Prof. Mike Payne and Dr. Daniel Cole
-   }                                                                                                                                                                                                                                                                 \\
-   \rowcolor{seaborn_bg_grey_half}
-   \multicolumn{5}{X}{
-      \textit{Funding:} EPSRC (valued at approx.\ \euro{}50,000)
-   }                                                                                                                                                                                                                                                                 \\
-   \rowcolor{seaborn_bg_grey_half}
-   \multicolumn{5}{X}{
-      Designed to lead into my PhD, my masters project motivated the need for models of the oxygen-evolving complex (OEC) that are thousands of atoms in size, and demonstrated that such calculations are feasible with the linear scaling density functional theory code ONETEP. The thesis also explored the DFT\,+\,\emph{U} as a method for treating the correlation present in the OEC core.
-   }                                                                                                                                                                                                                                                                 \\
+   I was briefly employed as a Research Assistant at the University of Otago, where I continued the work from my honours year studying the behaviour of dipolar Bose gases. This work resulted in a publication where we predicted an instability of dipolar BECs in regions of experimental interest.                                                                     \\
    %
    % Hons
    %
-   \rowcolor{seaborn_bg_grey} 25 Feb 2013                                                                             & 4 Nov 2013                                                               & BSc (Hons) in Physics  & University of Otago     & First Class    \\
-   \multicolumn{5}{X}{\cellcolor{seaborn_bg_grey}%
-      \textit{Title:} ``Non-zero Temperature Theory for Ultra-Cold Dipolar Bose Gases"
-   }                                                                                                                                                                                                                                                                 \\
-   \multicolumn{5}{X}{\cellcolor{seaborn_bg_grey}%
-      \textit{Supervisor:} Prof. P. Blair Blakie
-   }                                                                                                                                                                                                                                                                 \\
-   \multicolumn{5}{X}{\cellcolor{seaborn_bg_grey}%
-      This one-year honours programme comprised of taught courses in physics and mathematics, and a research project. My research project explored the effects of temperature on the behaviour of quasi-2D dipolar Bose-Einstein condensates; that is, BECs whose atoms (a) interact with an appreciable magnetic dipole-dipole moment and (b) are contained within a 2D optical trap. (See the ``Professional Experience" section for the outcome of this research.)
-   }                                                                                                                                                                                                                                                                 \\
+   \rowcolor{seaborn_bg_grey_half} \textbf{BSc (Hons) in Physics (25 Feb 2013 -- 4 Nov 2013)}                                                                                                                                                                                                                                                                                   \\
+   \cellcolor{seaborn_bg_grey_half}%
+   \textit{Title:} ``Non-zero Temperature Theory for Ultra-Cold Dipolar Bose Gases"
+   \\
+   \cellcolor{seaborn_bg_grey_half}%
+   \textit{Supervisor:} Prof. P. Blair Blakie
+   \\
+   \cellcolor{seaborn_bg_grey_half}%
+   This one-year honours programme comprised of taught courses in physics and mathematics, and a research project. My research project explored the effects of temperature on the behaviour of quasi-2D dipolar Bose-Einstein condensates; that is, BECs whose atoms (a) interact with an appreciable magnetic dipole-dipole moment and (b) are contained within a 2D optical trap. I graduated with first-class honours.
+   \\
    %
    % BSc
    %
+   \rowcolor{seaborn_bg_grey}
+      \hbox{%
+      \raisebox{-0.5\height}{\fbox{\includegraphics[height=1cm]{logos/berkeley_trimmed.png}}}
+      \raisebox{-0.5\height}{\begin{minipage}[b]{0.7\linewidth}
+         University of California, Berkeley \\ United States of America
+      \end{minipage}}
+      } \\
+   \rowcolor{seaborn_bg_grey}
+   \textbf{Exchange (16 Aug 2012 -- 14 Dec 2012)}                                                                                                                                                                                                                                                                                                                          \\
+   \cellcolor{seaborn_bg_grey}%
+   I spent the final semester of my BSc (see below) on exchange at Berkeley.
+   \\
    \rowcolor{seaborn_bg_grey_half}
-   1 Mar 2010                                                                                                         & 10 Nov 2012                                                              &
-   \multicolumn{1}{m{0.26\textwidth}}{BSc in Mathematics and Physics}                                                 &
-   \multicolumn{1}{m{0.25\textwidth}}{University of \mbox{Otago} and \mbox{University} of \mbox{California} Berkeley} & Straight A\textsuperscript{+}'s                                                                                                              \\
-   \multicolumn{5}{X}{\cellcolor{seaborn_bg_grey_half}%
-      A three-year Bachelor's degree with a double-major in mathematics and physics. I spent the final semester of this degree on exchange at Berkeley.
-   }                                                                                                                                                                                                                                                                 \\
+      \hbox{%
+      \raisebox{-0.5\height}{\fbox{\includegraphics[height=1.5cm]{logos/otago_trimmed.png}}}
+      \raisebox{-0.5\height}{\begin{minipage}[b]{0.7\linewidth}
+         University of Otago \\ New Zealand
+      \end{minipage}}
+      } \\
+   \rowcolor{seaborn_bg_grey_half}
+   \rowcolor{seaborn_bg_grey_half}
+   \textbf{BSc in Mathematics and Physics (1 Mar 2010 -- 10 Nov 2012)} \\
+   \cellcolor{seaborn_bg_grey_half}%
+   A three-year Bachelor's degree with a double-major in mathematics and physics. I obtained straight A\textsuperscript{+} grades throughout.
+   \\
+   \rowcolor{seaborn_bg_grey_half}
+   \textbf{Summer studentship (21 Nov 2011 -- 30 Jan 2012)}                                                                                                                                                                                                                                                                                                                \\
+   \rowcolor{seaborn_bg_grey_half}
+   During my undergraduate studies I spent a summer in a studentship with a interdisciplinary research group developing new computed tomography (CT) scanning technology. I was involved in developing software that allowed the research team to quantify the quality of their images (and hence assess the performance of their machines during development). \\
 \end{tabularx}
 %}
 
@@ -163,7 +201,6 @@
    EBL and P.\,B.\,Blakie, \href{https://journals.aps.org/pra/pdf/10.1103/PhysRevA.90.053605}{\textit{Thermally activated local collapse of a flattened dipolar condensate}}. Phys. Rev.~A 90 (2014) 053605                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   & 9 citations; selected as an Editors' Suggestion
 \end{tabularx}
 
-\newpage
 \begin{tabularx}{\textwidth}{
    m{\dimexpr0.10\textwidth-2\tabcolsep}%
    m{\dimexpr0.70\textwidth-2\tabcolsep}%
@@ -184,6 +221,8 @@
                  & \textit{University of Canterbury Mathematics Scholarship} for study at the University of Canterbury (not taken up)        & \euro2,500                 \\
                  & \textit{University of Canterbury Science Scholarship} for study at the University of Canterbury (not taken up)            & \euro600                   \\
 \end{tabularx}
+
+\newpage
 
 \begin{tabularx}{\textwidth}{l m{0.9\textwidth}}
    \rowcolor{seaborn_blue}
