--- a/cv.tex
+++ b/cv.tex
@@ -65,8 +65,9 @@
       \end{minipage}}
       }
       \\
+   \rowcolor{seaborn_bg_grey_half}%
    \textbf{Postdoctoral researcher (1 Nov 2019 -- present)}                                                                                                                                                                                                                                                                                                                \\
-   \rowcolor{seaborn_bg_grey_half}
+   \rowcolor{seaborn_bg_grey_half}%
    \textit{Supervisor:} Prof. Nicola Marzari
    \\
 
@@ -127,7 +128,7 @@
          University of Otago \\ New Zealand
       \end{minipage}}
       } \\
-   \rowcolor{seaborn_bg_grey}
+   \rowcolor{seaborn_bg_grey_half}
    \textbf{Research Assistant (1 Mar 2014 -- 31 July 2014)} \\
    \rowcolor{seaborn_bg_grey_half}
    I was briefly employed as a Research Assistant at the University of Otago, where I continued the work from my honours year studying the behaviour of dipolar Bose gases. This work resulted in a publication where we predicted an instability of dipolar BECs in regions of experimental interest.                                                                     \\
