Fixing more row colours

--- a/cv.tex
+++ b/cv.tex
@@ -70,7 +70,7 @@
    \rowcolor{seaborn_bg_grey_half}%
    \textit{Supervisor:} Prof. Nicola Marzari
    \\
-
+   \rowcolor{seaborn_bg_grey_half}%
    I am currently a postdoc in the group of Prof. Nicola Marzari. I am working on developing Koopmans spectral functionals for addressing systematic errors in density functional theory.
    \\
    %
