--- a/cv.tex
+++ b/cv.tex
@@ -130,6 +130,9 @@
       } \\
    \rowcolor{seaborn_bg_grey_half}
    \textbf{Research Assistant (1 Mar 2014 -- 31 July 2014)} \\
+   \cellcolor{seaborn_bg_grey_half}%
+   \textit{Supervisor:} Prof. P. Blair Blakie
+   \\
    \rowcolor{seaborn_bg_grey_half}
    I was briefly employed as a Research Assistant at the University of Otago, where I continued the work from my honours year studying the behaviour of dipolar Bose gases. This work resulted in a publication where we predicted an instability of dipolar BECs in regions of experimental interest.                                                                     \\
    %
